# json-schema-to-pydantic

./: .gitignore  CONVENTIONS.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
docs/: features.md
src/autogen_mcp_tool_adapter/: __init__.py  exceptions.py  interfaces.py  model_builder.py  pydantic_model_builder.py  schema_builder.py  schema_builder_1.py  validators.py
src/json_schema_to_pydantic/: __init__.py  builders.py  handlers.py  interfaces.py  model_builder.py  resolvers.py
tests/: test_builders.py  test_handlers.py  test_model_builder.py  test_pydantic_model_builder.py  test_recursive_models.py  test_resolvers.py  test_scalar_root.py  test_schema_builder.py  test_schema_builder_1.py  test_top_level_array.py  test_validators.py
